# Sketch2Graphviz

./: .gitignore  LICENSE  NEW simple_synthetic_data_gen.json  README.md  Sketch2Graphviz.ipynb  data.py  graphviz_renderer.py  model.py  package-lock.json  package.json  requirements.txt  simple_synthetic_data_gen_gpt_5.2.json  simple_synthetic_data_gen_mini.json
Sketch2Graphviz-client/: index.html  package-lock.json  package.json
Sketch2Graphviz-client/src/: App.jsx  index.css
Sketch2Graphviz-model/: README.md  Sketch2Graphviz.ipynb  dot_render.sh  example.dot
Sketch2Graphviz-model/scripts/: data.py  eval.py  finetune_lora.py  inference.py  model.py
client/: index.html  package-lock.json  package.json
client/public/: manifest.json
data/: simple_synthetic_data_gen.json
model/: .dockerignore  Dockerfile  Sketch2Graphviz.ipynb  llm_judge.py  main.py  postgresql_setup.sh  pyproject.toml  requirements.txt  results.md
model/outputs/: testing_outputs_no_rag.jsonl  testing_outputs_rag.jsonl
model/scripts/: data.py  embeddings.py  eval.py  eval_clip_llama.py  finetune_clip_llama_lora.py  finetune_lora.py  graphviz_renderer.py  inference.py  model.py  model_clip_llama.py  model_lora_trainer.py  prompts.py  psql_vector_db.py  selective_edit.py  synthetic_data_gen.py
model/scripts/clip_llama/: eval_clip_llama.py  finetune_clip_llama_lora.py  model_clip_llama.py
model/scripts/sql/: vector_db_creation.sql
model/testing_outputs/v1_old/: dot_codes.md
model/tests/: conftest.py  test_eval.py  test_selective_edit.py
scripts/: eval.py  inference.py
(+9 files in other folders)
