[project]
name = "model"
version = "0.1.0"
description = "Convert hand-drawn sketches and images of graphs into proper Graphviz DOT code using a fine-tuned Vision-Language Model with Retrieval-Augmented Generation."
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "accelerate>=1.13.0",
    "azure-ai-projects>=2.0.1",
    "azure-identity>=1.25.3",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "fastapi>=0.135.3",
    "graphviz>=0.21",
    "huggingface-hub>=1.10.1",
    "lpips>=0.1.4",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "openai>=2.31.0",
    "pandas>=3.0.2",
    "peft>=0.18.1",
    "pgvector>=0.4.2",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.0",
    "pydot>=4.0.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "tqdm>=4.67.3",
    "transformers>=5.5.3",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
